# ai-voice-agent

./: .gitignore  README.md  SOLUTION.md  bot.py  ehr.py  pyproject.toml
.github/workflows/: ci.yml
agent/: ehr_client.py  ehr_tools.py  prompts.py
agent/tests/: test_ehr_client.py  test_ehr_tools.py
ehr_service/: api.py  database.py  domain.py  models.py  repository.py  rpc.py  schemas.py  seed.py  services.py
ehr_service/tests/: test_ehr.py  test_ehr_unit.py
scripts/: ehr-smoke.sh  run-agent-e2e.sh
