[project]
name = "prosper-challenge"
version = "0.1.0"
description = "Template repository for clinic appointment scheduling voice agent challenge"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,elevenlabs,openai,local-smart-turn-v3,runner]",
    "pipecat-ai-cli",
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "pytest>=9.1.1",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
